# flake_env

./: Justfile  README.md  default.nix  direnvrc  dune-project  dune-workspace  flake.nix  flake_env.opam
.github/workflows/: repo-lockdown.yml  test.yml
lib/: dune  flake_env__util.re  flake_env__versions.re  flake_env__watches.re  lib.re
src/: dune  flake_env.re
tests/: dune  flake_env_test_util.re  flake_env_test_versions.re  flake_env_test_watches.re  spit_gibberish.sh  spit_version.sh
